# SimpleWebServer

./: CMakeLists.txt  launch.sh
src/: Connection.cpp  Connection.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestParser.hpp  ReuqestParser.cpp  daemonize.c  header.hpp  helpers.cpp  helpers.hpp  main.cpp  reply.cpp  reply.hpp  request.hpp  server.cpp  server.hpp
